[tool.poetry]
name = "clickcounter"
version = "0.9.0"
description = ""
authors = ["Johannes Valbjorn <johannes.valbjorn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
clickcounter = 'clickcounter._cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


