[tool.poetry]
name = "clickcounter"
version = "1.0.4"
description = "Create redirect url's with click monitoring from multiple providers"
authors = ["Johannes Valbjorn <johannes.valbjorn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
lxml = "^4.6.3"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
clickcounter = 'clickcounter._cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


